modified default layout and took out base in front of css and js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,36 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{page.title}}{% else %}{{site.title}}{% endif %}</title>
     <meta name="description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
-    <base href="{{site.url}}"> 
+    <base href="{{site.url}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- CSS -->
-    {% include base.html %}
-    <link rel="stylesheet" href="{{base}}/css/owl.carousel.css">
-    <link rel="stylesheet" href="{{base}}/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{base}}/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{{base}}/css/style.css">
-    <link rel="stylesheet" href="{{base}}/css/ionicons.min.css">
-    <link rel="stylesheet" href="{{base}}/css/animate.css">
-    <link rel="stylesheet" href="{{base}}/css/responsive.css">
+
+    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ionicons.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <!-- Js -->
-    <script src="{{base}}/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{base}}/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-    <script src="{{base}}/js/bootstrap.min.js"></script>
-    <script src="{{base}}/js/owl.carousel.min.js"></script>
-    <script src="{{base}}/js/plugins.js"></script>
-    <script src="{{base}}/js/min/waypoints.min.js"></script>
-    <script src="{{base}}/js/jquery.counterup.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/min/waypoints.min.js"></script>
+    <script src="js/jquery.counterup.js"></script>
 
     <!-- Google Map -->
     <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script src="{{base}}/js/google-map-init.js"></script>
+    <script src="js/google-map-init.js"></script>
 
 
-    <script src="{{base}}/js/main.js"></script>
+    <script src="js/main.js"></script>
 
 
   </head>
